Update views to use templates

--- a/class_discuss_site/templates/class_discuss_site/course.html
+++ b/class_discuss_site/templates/class_discuss_site/course.html
@@ -1,1 +1,7 @@
-{{ course }}
+{% extends "base.html" %}
+
+{% block title %}Course{% endblock %}
+
+{% block content %}
+    {{ course }}
+{% endblock %}
