--- a/class_discuss_site/templates/class_discuss_site/group.html
+++ b/class_discuss_site/templates/class_discuss_site/group.html
@@ -1,1 +1,7 @@
-{{ group }}
+{% extends "base.html" %}
+
+{% block title %}Group{% endblock %}
+
+{% block content %}
+    {{ group }}
+{% endblock %}
