--- a/class_discuss_site/templates/class_discuss_site/courses.html
+++ b/class_discuss_site/templates/class_discuss_site/courses.html
@@ -1,9 +1,15 @@
-{% if courses %}
-    <ul>
-    {% for course in courses %}
-        <li><a href="/courses/{{ course.id }}/">{{ course.name }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No courses are available.</p>
-{% endif %}
+{% extends "base.html" %}
+
+{% block title %}Courses{% endblock %}
+
+{% block content %}
+    {% if courses %}
+        <ul>
+            {% for course in courses %}
+                <li><a href="/courses/{{ course.id }}/">{{ course.name }}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No courses are available.</p>
+    {% endif %}
+{% endblock %}
