--- a/class_discuss_site/templates/class_discuss_site/groups.html
+++ b/class_discuss_site/templates/class_discuss_site/groups.html
@@ -1,9 +1,15 @@
-{% if groups %}
-    <ul>
-    {% for group in groups %}
-        <li><a href="/groups/{{ group.id }}/">{{ group.name }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No groups are available.</p>
-{% endif %}
+{% extends "base.html" %}
+
+{% block title %}Groups{% endblock %}
+
+{% block content %}
+    {% if groups %}
+        <ul>
+            {% for group in groups %}
+                <li><a href="/groups/{{ group.id }}/">{{ group.name }}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No groups are available.</p>
+    {% endif %}
+{% endblock %}
