--- a/class_discuss_site/templates/class_discuss_site/users.html
+++ b/class_discuss_site/templates/class_discuss_site/users.html
@@ -1,9 +1,15 @@
-{% if users %}
-    <ul>
-    {% for user in users %}
-        <li><a href="/users/{{ user.id }}/">{{ user.name }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No users are available.</p>
-{% endif %}
+{% extends "base.html" %}
+
+{% block title %}Users{% endblock %}
+
+{% block content %}
+    {% if users %}
+        <ul>
+            {% for user in users %}
+                <li><a href="/groups/{{ user.id }}/">{{ user.name }}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No users are available.</p>
+    {% endif %}
+{% endblock %}
