Link to courses and groups

--- a/class_discuss_site/templates/base.html
+++ b/class_discuss_site/templates/base.html
@@ -26,8 +26,8 @@
                 <div class="inner">
                     <h3 class="masthead-brand">ClassDiscuss</h3>
                     <ul class="nav masthead-nav">
-                        <li><a href="#">Classes</a></li>
-                        <li><a href="#">Discussions</a></li>
+                        <li><a href="/courses">Classes</a></li>
+                        <li><a href="/groups">Discussions</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
