--- a/class_discuss_site/templates/class_discuss_site/users.html
+++ b/class_discuss_site/templates/class_discuss_site/users.html
@@ -6,7 +6,7 @@
     {% if users %}
         <ul>
             {% for user in users %}
-                <li><a href="/groups/{{ user.id }}/">{{ user.name }}</a></li>
+                <li><a href="/users/{{ user.username }}/">{{ user.email }}</a></li>
             {% endfor %}
         </ul>
     {% else %}
