--- a/class_discuss_site/templates/class_discuss_site/groups.html
+++ b/class_discuss_site/templates/class_discuss_site/groups.html
@@ -7,6 +7,7 @@
         <table class="table">
             <thead>
                 <tr>
+                    <th>Course</th>
                     <th>Discussion</th>
                     <th>Time</th>
                     <th>Location</th>
@@ -16,6 +17,7 @@
             <tbody>
             {% for group in groups %}
                 <tr>
+                    <td><a href="/courses/{{ group.course.id }}/">{{ group.course.name }}</a></td>
                     <td><a href="/groups/{{ group.id }}/">{{ group.name }}</a></td>
                     <td>{{ group.time.ctime }}</td>
                     <td>{{ group.location }}</td>
