--- a/class_discuss_site/templates/base.html
+++ b/class_discuss_site/templates/base.html
@@ -27,8 +27,8 @@
                     <h3 class="masthead-brand">ClassDiscuss</h3>
                     <ul class="nav masthead-nav">
                         <li><a href="/courses">Classes</a></li>
-                        <li><a href="/groups">Discussions</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="/groups">My Discussions</a></li>
+                        <li><a href="#">About</a></li>
                     </ul>
                 </div>
             </div>
