--- a/class_discuss_site/templates/class_discuss_site/course.html
+++ b/class_discuss_site/templates/class_discuss_site/course.html
@@ -7,6 +7,11 @@
     {{ course.description }}
     {{ course.instructor }}
 
+    <a href="/courses/create">
+        <button type="button" class="btn btn-primary btn-lg btn-block">Create New Discussion
+        </button>
+    </a>
+
     {% if groups %}
         <table class="table">
             <thead>
