--- a/class_discuss_site/templates/class_discuss_site/discussion_detail.html
+++ b/class_discuss_site/templates/class_discuss_site/discussion_detail.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Group{% endblock %}
+{% block title %}Discussion{% endblock %}
 
 {% block content %}
-    {{ group }}
+    {{ discussion }}
 
     {% if messages %}
         <table class="table">
@@ -26,7 +26,7 @@
         <p>No messages are available.</p>
     {% endif %}
 
-    <form class="form-signin wideInput" role="form" action="/groups/{{ group.id }}/insert" method="post">
+    <form class="form-signin wideInput" role="form" action="/discussions/{{ discussion.id }}" method="post">
         {% csrf_token %}
         <! Discussion Topic>
         <div class="input-group input-group-lg" style="padding-top: 20px;">
