Rename some more stuff

--- a/class_discuss_site/templates/base.html
+++ b/class_discuss_site/templates/base.html
@@ -26,8 +26,8 @@
                 <div class="inner">
                     <h3 class="masthead-brand">ClassDiscuss</h3>
                     <ul class="nav masthead-nav">
-                        <li><a href="/courses">Classes</a></li>
-                        <li><a href="/groups">My Discussions</a></li>
+                        <li><a href="/courses">Courses</a></li>
+                        <li><a href="/discussions">My Discussions</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
                 </div>
