--- a/class_discuss_site/templates/class_discuss_site/index.html
+++ b/class_discuss_site/templates/class_discuss_site/index.html
@@ -7,7 +7,7 @@
     <!-- left side-->
     <div class="col-lg-6">
         <div class="col-md-8">
-            <h3 align="left" style="font-size:80px"><strong class="text-info">Class Discuss</strong></h3>
+            <h3 style="font-size:80px"><strong class="text-info">Class Discuss</strong></h3>
         </div>
         <!-- right side-->
         <div class="col-md-4">
