Added 404 and 500 error files

--- a/class_discuss_site/templates/500.html
+++ b/class_discuss_site/templates/500.html
@@ -3,5 +3,5 @@
 {% block title %}500 Error{% endblock %}
 
 {% block content %}
-    <p>You've hit a dead end</p>
+    <p>You've hit a dead end at 440 mph.</p>
 {% endblock %}
