--- a/class_discuss_site/templates/class_discuss_site/course_detail.html
+++ b/class_discuss_site/templates/class_discuss_site/course_detail.html
@@ -8,8 +8,9 @@
 
     {{ course.instructor }}
 
+
     <a href="/discussions/create">
-        <button type="button" class="btn btn-primary btn-lg btn-block">Create New Discussion
+        <button type="button" class="btn btn-primary btn-info btn-block">Create New Discussion
         </button>
     </a>
 
