--- a/class_discuss_site/templates/class_discuss_site/user_discussions.html
+++ b/class_discuss_site/templates/class_discuss_site/user_discussions.html
@@ -11,7 +11,7 @@
                 <th>Course</th>
                 <th>Discussion</th>
                 <th>Time</th>
-                <th>Attendance</th>
+                <th>Members</th>
             </tr>
             </thead>
             <tbody>
