--- a/class_discuss_site/templates/class_discuss_site/course_detail.html
+++ b/class_discuss_site/templates/class_discuss_site/course_detail.html
@@ -19,7 +19,7 @@
             <tr>
                 <th>Discussion</th>
                 <th>Time</th>
-                <th>Attendance</th>
+                <th>Members</th>
             </tr>
             </thead>
             <tbody>
