--- a/class_discuss_site/templates/class_discuss_site/discussions_create.html
+++ b/class_discuss_site/templates/class_discuss_site/discussions_create.html
@@ -8,7 +8,7 @@
         <! Discussion Topic>
         <div class="input-group input-group-lg" style="padding-top: 20px;">
             <span class="input-group-addon">Discussion Topic: </span>
-            <input type="text" name="name" class="form-control" placeholder="Name your dicussion group">
+            <input type="text" name="name" class="form-control" placeholder="Specify your discussion topic">
         </div>
         <!div>
 
