--- a/class_discuss_site/templates/class_discuss_site/discussion_detail.html
+++ b/class_discuss_site/templates/class_discuss_site/discussion_detail.html
@@ -14,7 +14,7 @@
         </td>
     {% else %}
         <td>
-            <a href="/discussions/{{ discussion.id }}/">
+            <a href="/discussions/{{ discussion.id }}/logout/">
                 <button type="button"
                         class="btn btn-danger btn-sm">{{ discussion.members.count }}/{{ discussion.size }}</button>
             </a>
