--- a/class_discuss_site/templates/class_discuss_site/discussions_create.html
+++ b/class_discuss_site/templates/class_discuss_site/discussions_create.html
@@ -10,15 +10,17 @@
             <span class="input-group-addon">Discussion Topic: </span>
             <input type="text" name="name" class="form-control" placeholder="Specify your discussion topic">
         </div>
-        <!div>
+
+        <div class="input-group input-group-lg" style="padding-top: 20px;">
+            <span class="input-group-addon">Course Name: </span>
+            <input type="text" name="course_name" class="form-control" placeholder="Specify your Course">
+        </div>
 
         <div class="narrowInput">
             <! Total Participants>
             <div class="input-group input-group-lg" style="padding-top: 20px;">
                 <span class="input-group-addon">Total Participants: </span>
-                <input type="text" name="size" class="form-control" maxlength=1 value=1><!placeholder="Maximum
-                participants in
-                the group">
+                <input type="number" name="size" class="form-control" maxlength=1 value=2>
             </div>
 
             <! Date>
