--- a/class_discuss_site/templates/class_discuss_site/discussion_detail.html
+++ b/class_discuss_site/templates/class_discuss_site/discussion_detail.html
@@ -16,7 +16,7 @@
         <td>
             <a href="/discussions/{{ discussion.id }}/logout/">
                 <button type="button"
-                        class="btn btn-danger btn-sm">{{ discussion.members.count }}/{{ discussion.size }}</button>
+                        class="btn btn-danger btn-sm">Leave : {{ discussion.members.count }}/{{ discussion.size }}</button>
             </a>
         </td>
     {% endif %}
